--- a/public/css/login.css
+++ b/public/css/login.css
@@ -19,7 +19,7 @@ body{
 	bottom: -40px;
 	width: auto;
 	height: auto;
-	background-image: url(../assets/img/circuitos.jpg);
+	background-image: url(http://ginva.com/wp-content/uploads/2012/07/city-skyline-wallpapers-008.jpg);
 	background-size: cover;
 	-webkit-filter: blur(5px);
 	z-index: 0;
@@ -40,8 +40,8 @@ body{
 
 .header{
 	position: absolute;
-	top: calc(50% - 50px);
-	left: calc(50% - 370px);
+	top: calc(50% - 35px);
+	left: calc(50% - 255px);
 	z-index: 2;
 }
 
@@ -49,7 +49,7 @@ body{
 	float: left;
 	color: #fff;
 	font-family: 'Exo', sans-serif;
-	font-size: 30px;
+	font-size: 35px;
 	font-weight: 200;
 }
 
